--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
             <div class="hero">
                 <h1><i class="fas fa-cut"></i> Daniel Staff</h1>
                 <p class="hero-subtitle">💇‍♀️ Más de 20 años realzando tu belleza natural</p>
-                <a href="#contacto" class="cta-button">
+                <!--<a href="#contacto" class="cta-button">
                     <i class="fas fa-calendar-alt"></i> Reservar Cita
-                </a>
+                </a>-->
             </div>
         </div>
     </header>
@@ -56,10 +56,10 @@
                 </div>
                 <div class="service-card fade-in">
                     <div class="service-icon">
-                        <i class="fas fa-spa"></i>
+                        <i class="fas fa-paint-brush"></i>
                     </div>
-                    <h3>Tratamientos Faciales</h3>
-                    <p>Limpieza facial profunda y tratamientos anti-edad para una piel radiante.</p>
+                    <h3>Maquillaje</h3>
+                    <p>Maquillaje profesional para eventos, bodas, sesiones fotográficas y ocasiones especiales.</p>
                 </div>
                 <div class="service-card fade-in">
                     <div class="service-icon">
@@ -102,15 +102,15 @@
                     </div>
                 </div>
                 <div class="gallery-item fade-in">
-                    <img src="./images/gallery-facial.jpg" alt="Tratamiento facial" loading="lazy" onerror="this.parentElement.innerHTML='<div class=placeholder-img>FACIAL<br><small>Imagen próximamente</small></div>'">
+                    <img src="./images/gallery-maquillaje.jpg" alt="Maquillaje profesional" loading="lazy" onerror="this.parentElement.innerHTML='<div class=placeholder-img>MAQUILLAJE<br><small>Imagen próximamente</small></div>'">
                     <div class="gallery-overlay">
-                        <h4>Facial</h4>
+                        <h4>Maquillaje</h4>
                     </div>
                 </div>
                 <div class="gallery-item fade-in">
-                    <img src="./images/gallery-tratamientos.jpg" alt="Tratamiento capilar" loading="lazy" onerror="this.parentElement.innerHTML='<div class=placeholder-img>TRATAMIENTOS<br><small>Imagen próximamente</small></div>'">
+                    <img src="./images/gallery-ninos.jpg" alt="Corte de cabello para niños" loading="lazy" onerror="this.parentElement.innerHTML='<div class=placeholder-img>CORTES NIÑOS<br><small>Imagen próximamente</small></div>'">
                     <div class="gallery-overlay">
-                        <h4>Tratamientos</h4>
+                        <h4>Cortes Niños</h4>
                     </div>
                 </div>
             </div>
@@ -122,12 +122,12 @@
         <div class="container">
             <div class="about-content">
                 <div class="about-text fade-in">
-                    <h2>Conoce [Tu Salón Aquí]</h2>
-                    <p>Somos un salón de belleza con más de 10 años de experiencia en el sector. Nos especializamos en crear looks únicos que reflejen tu personalidad y estilo.</p>
+                    <h2>Conoce Daniel Staff</h2>
+                    <p>Somos un salón de belleza con más de 20 años de experiencia en el sector. Nos especializamos en crear looks únicos que reflejen tu personalidad y estilo.</p>
                     <p>Nuestro equipo de profesionales se mantiene actualizado con las últimas tendencias y técnicas para ofrecerte siempre el mejor servicio.</p>
                     <div class="stats">
                         <div class="stat">
-                            <span class="stat-number">10+</span>
+                            <span class="stat-number">20+</span>
                             <span class="stat-label">Años de experiencia</span>
                         </div>
                         <div class="stat">
@@ -141,7 +141,7 @@
                     </div>
                 </div>
                 <div class="about-image fade-in">
-                    <img src="./images/about-salon.jpg" alt="Interior del salón [Tu Salón Aquí]" loading="lazy" onerror="this.parentElement.innerHTML='<div class=placeholder-img style=height:400px>INTERIOR DEL SALÓN<br><small>Imagen próximamente</small></div>'">
+                    <img src="./images/about-salon.jpg" alt="Interior del salón Daniel Staff" loading="lazy" onerror="this.parentElement.innerHTML='<div class=placeholder-img style=height:400px>INTERIOR DEL SALÓN<br><small>Imagen próximamente</small></div>'">
                 </div>
             </div>
         </div>
@@ -155,7 +155,7 @@
                 <div class="contact-item fade-in">
                     <i class="fas fa-map-marker-alt"></i>
                     <h3>Ubicación</h3>
-                    <p>Av. Italia y Propios<br>Montevideo, Uruguay</p>
+                    <p>Av. Agraciada 2597<br>Montevideo, Uruguay</p>
                 </div>
                 <div class="contact-item fade-in">
                     <i class="fas fa-clock"></i>
@@ -165,10 +165,10 @@
                 <div class="contact-item fade-in">
                     <i class="fas fa-phone"></i>
                     <h3>Contacto</h3>
-                    <p>Reservas por WhatsApp<br>Consultas sin compromiso</p>
+                    <p>2205 5807<br>Consultas sin compromiso</p>
                 </div>
             </div>
-            <a href="https://wa.me/59892345678?text=Hola%20[Tu%20Salón%20Aquí]%2C%20me%20interesa%20conocer%20más%20sobre%20sus%20servicios" class="whatsapp-btn" target="_blank">
+            <a href="https://wa.me/59899593346?text=Hola%20Daniel%20Staff%2C%20me%20interesa%20conocer%20más%20sobre%20sus%20servicios" class="whatsapp-btn" target="_blank">
                 <i class="fab fa-whatsapp"></i>
                 Reservar por WhatsApp
             </a>
@@ -178,18 +178,18 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2025 [Tu Salón Aquí] - Peluquería & Belleza</p>
+            <p>&copy; 2025 Daniel Staff - Peluquería & Belleza</p>
             <p>Diseñado con ❤️ para realzar tu belleza natural</p>
             <div class="social-links">
-                <a href="#" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
-                <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-                <a href="#" aria-label="WhatsApp"><i class="fab fa-whatsapp"></i></a>
+                <a href="https://www.facebook.com/profile.php?id=100063680468334" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
+                <a href="https://www.instagram.com/daniel_staff" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+                <!--<a href="#" aria-label="WhatsApp"><i class="fab fa-whatsapp"></i></a>-->
             </div>
         </div>
     </footer>
 
     <!-- Floating WhatsApp Button -->
-    <a href="https://wa.me/59892345678?text=Hola%20[Tu%20Salón%20Aquí]%2C%20me%20interesa%20conocer%20más%20sobre%20sus%20servicios" class="floating-whatsapp" target="_blank" aria-label="Contactar por WhatsApp">
+    <a href="https://wa.me/59899593346?text=Hola%20Daniel%20Staff%2C%20me%20interesa%20conocer%20más%20sobre%20sus%20servicios" class="floating-whatsapp" target="_blank" aria-label="Contactar por WhatsApp">
         <i class="fab fa-whatsapp"></i>
     </a>
 
